[project]
name = "ecloud-server"
version = "0.1.0"
description = "GCloud Storage browser server with JSON-RPC interface"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "google-cloud-storage>=2.14.0",
    "pydantic>=2.5.0",
    "google-cloud-artifact-registry>=1.19.0",
    "google-cloud-compute>=1.14.0",
    "google-api-python-client>=2.0.0",
    "cloud-sql-python-connector>=1.0.0",
    "google-cloud-container>=2.0.0",
    "kubernetes>=29.0.0",
    "PyYAML>=6.0.0",
]
license = {text = "MIT"}
authors = [
    {name = "Jing"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
